--- a/style.css
+++ b/style.css
@@ -14,8 +14,6 @@ body {
     display: block;
 }
 
-
-
 h3 {
     margin-top: 25px;
     border-bottom: 5px solid rgb(0, 146, 195);
@@ -50,4 +48,12 @@ h3 {
     text-align: left;
     /* margin-left: auto; */
     margin-top: 10px;
+}
+
+#workout-list li {
+    padding: 10px 12px;
+    margin-bottom: 8px;
+    background-color: #f0f0f0;
+    border-radius: 4px;
+    /* border-left: 3px solid #3498db; */
 }
