--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ h3 {
     box-sizing: content-box;
     width: 700px;
     height: auto;
-    border-color: black;
-    border-style: solid;
-    border-radius: 5px;
+    padding: 25px;
+    border: 2px solid black;
+    border-radius: 8px;
     text-align: center;
     justify-content: center;
     margin: 0 auto 25px;
@@ -56,4 +56,33 @@ h3 {
 
 #container-4 th {
     align: center;
+}
+
+#workout-list {
+    padding: 20px 20px 25px 20px;
+}
+
+.workout-card {
+    transition: all 0.2s ease;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.workout-card .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.workout-card:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+}
+
+.workout-card img {
+    height: 80px;
+    margin-bottom: 15px;
 }
